--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<li><a href="https://twitter.com/saichandy"><span class="icon fa-twitter fa-4x"><span class="label">Ipsum</span></span></a></li>
 								<li><a href="https://www.instagram.com/saichandy/"><span class="icon fa-instagram fa-4x"><span class="label">Dolor</span></span></a></li>
 								<li><a href="https://www.linkedin.com/in/sai-konduru-05a60b114/"><span class="icon fa-linkedin fa-4x"><span class="label"></span></a></li>
-								<li><a href="file:///C:/Users/Sai/Documents/College%20Work/Website/Konduru_Resume_2-14-2017.pdf" target="_blank" title="Konduru_Resume_2-14-2017"><span class="fa fa-file-text fa-4x"></span></a></li>
+								<li><a href="file:///C:/Users/Sai/Documents/College%20Work/Website/sck42.github.io/Konduru_Resume_2-14-2017.pdf" target="_blank" title="Konduru_Resume_2-14-2017"><span class="fa fa-file-text fa-4x"></span></a></li>
 							</ul>
 						</div>
 					</section>
