--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<header class="major">
 								<h2>About Me</h2>
 								<img src=""></img>
-								<p>I was born in India and moved to California at the age of 9. Soon after I moved<br />
+								<p>I was born in India and moved to California at the age of 9. Soon after, I moved<br />
 								to Hershey, Pennsylvania and have lived there until I started college in Pittsburgh.<br />
 								I am a United States citizen and am eligible for employment. My hobbies outside <br /> 
 								the class room include gaming, playing sports with friends and watching movies. </p>
@@ -69,7 +69,6 @@
 								<li><a href="https://twitter.com/saichandy"><span class="icon fa-twitter fa-4x"><span class="label">Ipsum</span></span></a></li>
 								<li><a href="https://www.instagram.com/saichandy/"><span class="icon fa-instagram fa-4x"><span class="label">Dolor</span></span></a></li>
 								<li><a href="https://www.linkedin.com/in/sai-konduru-05a60b114/"><span class="icon fa-linkedin fa-4x"><span class="label"></span></a></li>
-								<li><a href="Konduru_Resume_2-14-2017.pdf" target="_blank" title="Konduru_Resume_2-14-2017"><span class="fa fa-file-text fa-4x"></span></a></li>
 							</ul>
 						</div>
 					</section>
@@ -79,17 +78,10 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pexels-photo-297755.jpeg" alt="" /></div><div class="content">
 								<h2>Research Assistant</h2>
-								<p>Over the past year, I've been working as a research assistant for the University of Pittsburgh's Department of Economics. My job usually entailed looking for old street map of various cities and maping them out in ArcGiS.  </p>
+								<p>Over the past year, I've been working as a research assistant for the University of Pittsburgh's Department of Economics. My job usually entails looking for old street maps of various cities and maping them out in ArcGiS.  </p>
 							</div>
 						</section>
 					<!--	<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Augue eleifend aliquet<br />
 								sed condimentum</h2>
@@ -114,6 +106,10 @@
 									<h3>Email</h3>
 									<p>saikonduru8@gmail.com</p>
 									<p>sck42@pitt.edu</p>
+								</li>
+								<li class="fa fa-file-text" >
+									<h3>Resume</h3>
+									<a href="Konduru_Resume_2-14-2017.pdf" target="_blank" title="Konduru_Resume_2-14-2017">Click Here for Resume</a>
 								</li>
 							</ul>
 						</div>
