Move GitHub Link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<h2>Sai Chand Konduru</h2>
 							<p>Computer Science and Economics<br />
-							Univeristy of Pittsburgh <br /><a href="https://github.com/sck42">GitHub</a></p>
+							Univeristy of Pittsburgh <br /></p>
 							<!--<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
 							</ul>-->
@@ -69,6 +69,7 @@
 								<li><a href="https://twitter.com/saichandy"><span class="icon fa-twitter fa-4x"><span class="label">Ipsum</span></span></a></li>
 								<li><a href="https://www.instagram.com/saichandy/"><span class="icon fa-instagram fa-4x"><span class="label">Dolor</span></span></a></li>
 								<li><a href="https://www.linkedin.com/in/sai-konduru-05a60b114/"><span class="icon fa-linkedin fa-4x"><span class="label"></span></a></li>
+								<li><a href="https://github.com/sck42"><span class="icon fa-github fa-4x"><span class="label"></span></a></li>
 							</ul>
 						</div>
 					</section>
