add Profile Pic

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
+								<p><img src="images/profile.jpg"></img></p>
 								<h2>About Me</h2>
-								<img src=""></img>
 								<p>I was born in India and moved to California at the age of 9. Soon after, I moved<br />
 								to Hershey, Pennsylvania and have lived there until I started college in Pittsburgh.<br />
 								I am a United States citizen and am eligible for employment. My hobbies outside <br /> 
@@ -72,6 +72,7 @@
 								<li><a href="https://github.com/sck42"><span class="icon fa-github fa-4x"><span class="label"></span></a></li>
 							</ul>
 						</div>
+
 					</section>
 
 				<!-- Two -->
